修改 java11 方法为 java8